[gd_scene load_steps=6 format=3 uid="uid://bcdsdqm5ikbu5"]

[ext_resource type="Script" uid="uid://bdku4p4lr8h6i" path="res://Scripts/grave.gd" id="1_eo5c6"]
[ext_resource type="Texture2D" uid="uid://dfyi1s5tmt3cj" path="res://Assets/tileset.png" id="1_kdo1t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eo5c6"]
atlas = ExtResource("1_kdo1t")
region = Rect2(40, 32, 8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mrtd"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tht1"]
size = Vector2(8, 9)

[node name="Grave" type="StaticBody2D"]
script = ExtResource("1_eo5c6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_eo5c6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0mrtd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_3tht1")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
